pkg/lang/testdata/ub/inputs/invalid/duplicate-modifier.ub
inputs: {
  region: {
    type:    string
    pattern: '^a'
    pattern: '^b'
  }
}
